public class Main {

  public static void main(String[] args) {
    Runner runner = Runner.getInstance();

    System.out.println();
    System.out.println("=================");
    System.out.println(">> TRAVEL COST <<");
    System.out.println("=================");
    System.out.println();

    runner.run();

  }
}